--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,76 @@
-setuptools==41.2.0
-tensorflow==2.3.0
-matplotlib==3.1.1
-gym==0.17.2
-ghast==0.1.0
+absl-py==1.0.0
+aniso8601==9.0.1
+astunparse==1.6.3
+attrs==21.2.0
+cachetools==4.2.4
+certifi==2021.10.8
+charset-normalizer==2.0.9
+cheroot==6.6.0
+click==7.1.2
+cloudpickle==1.3.0
+cycler==0.11.0
+decorator==5.1.0
 dgl==0.5.1
+dm-tree==0.1.6
+Flask==1.1.4
+flask-restplus==0.13.0
 future==0.18.2
+gast==0.3.3
+ghast==0.1.0
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.42.0
+gym==0.17.2
+h5py==2.10.0
+idna==3.3
+imageio==2.9.0
+importlib-metadata==4.8.2
+importlib-resources==5.4.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jsonschema==4.2.1
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+Markdown==3.3.6
+MarkupSafe==2.0.1
+matplotlib==3.1.1
+more-itertools==8.12.0
+networkx==2.6.3
 numpy==1.17.3
+oauthlib==3.1.1
+opt-einsum==3.3.0
+pandas==1.3.4
 periodictable==1.5.1
+Pillow==8.4.0
+protobuf==3.19.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pydot==1.4.2
+pyglet==1.5.0
+pyparsing==3.0.6
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.8
+scipy==1.4.1
+six==1.16.0
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
 tensorflow-gan==2.0.0
 tensorflow-hub==0.9.0
-imageio==2.9.0
+tensorflow-probability==0.15.0
+termcolor==1.1.0
+torch==1.10.0
+torchvision==0.11.1
 tqdm==4.48.2
+typing_extensions==4.0.1
+urllib3==1.26.7
+Werkzeug==1.0.1
+wrapt==1.13.3
+zipp==3.6.0
