--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ more-itertools==8.12.0
 networkx==2.6.3
 numpy==1.17.3
 oauthlib==3.1.1
+opencv-python==4.5.4.60
 opt-einsum==3.3.0
 pandas==1.3.4
 periodictable==1.5.1
